# challenge_kanban

./: README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/db/: __init__.py  config.py
backend/src/models/: __init__.py  page.py  project.py  task.py
backend/src/repositories/: __init__.py  project_repository.py  task_repository.py
backend/src/schemas/: __init__.py  project.py  tasks.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: Columns.tsx  Draggable.tsx  Droppable.tsx  apollo_client.tsx  globals.css  page.tsx
frontend/src/app/components/: Board.tsx  DeleteButton.tsx  EditButton.tsx  Task.tsx  TaskModal.tsx
frontend/src/app/hooks/: useMutations.tsx  useQueries.tsx
frontend/src/app/hooks/mutations/: mutations.tsx
frontend/src/app/hooks/queries/: queries.tsx
frontend/src/app/project/[id]/: page.tsx
schemas/: projects.json  tasks.json
