[project]
name = "backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "",email = ""},
]
dependencies = ["starlette-graphene3>=0.6.0", "fastapi>=0.115.12", "sqlalchemy>=2.0.40", "graphene>=3.4.3", "graphene-sqlalchemy>=2.1.0", "boto3>=1.37.31", "mypy-boto3-dynamodb>=1.37.31", "boto3-stubs>=1.37.31", "uvicorn>=0.34.0", "dotenv>=0.9.9"]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"
